Fixed comments after review from E.Stanilovskiy.